// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Page - Initial Render Tests Empty State should match snapshot for empty state 1`] = `
<main
  class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageTitleContainer ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-1vjf2v5"
      data-testid="heading"
      style="font-weight: 600; font-size: 16px;"
    >
      <div
        class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        style="gap: 20;"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-1vjf2v5"
        >
          Local Models (
          0
          )
        </span>
        <span
          aria-label="reload"
          class="anticon anticon-reload ml-sm"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="reload"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
            />
          </svg>
        </span>
      </div>
    </span>
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
      style="gap: 20;"
    >
      <a
        class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-link ant-btn-color-link ant-btn-variant-link"
        href="https://huggingface.co/models?search=gguf"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="link"
            class="anticon anticon-link"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="link"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M574 665.4a8.03 8.03 0 00-11.3 0L446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3l-39.8-39.8a8.03 8.03 0 00-11.3 0L191.4 526.5c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3L574 665.4zm258.6-474c-84.6-84.6-221.5-84.6-306 0L410.3 307.6a8.03 8.03 0 000 11.3l39.7 39.7c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204L665.3 562.6a8.03 8.03 0 000 11.3l39.8 39.8c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c84.5-84.6 84.5-221.5 0-306.1zM610.1 372.3a8.03 8.03 0 00-11.3 0L372.3 598.7a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l226.4-226.4c3.1-3.1 3.1-8.2 0-11.3l-39.5-39.6z"
              />
            </svg>
          </span>
        </span>
        <span>
          Available Models
        </span>
      </a>
      <button
        class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          Pull models
        </span>
      </button>
    </div>
  </div>
  <div
    class="pageContent"
  >
    <div
      class="ant-table-wrapper css-dev-only-do-not-override-1vjf2v5"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-middle ant-table-empty css-dev-only-do-not-override-1vjf2v5 ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="width: 1200px; min-width: 100%; table-layout: fixed;"
                >
                  <colgroup>
                    <col
                      style="width: 200px;"
                    />
                    <col
                      style="width: 250px;"
                    />
                    <col
                      style="width: 150px;"
                    />
                    <col
                      style="width: 100px;"
                    />
                    <col
                      style="width: 120px;"
                    />
                    <col
                      style="width: 130px;"
                    />
                    <col
                      style="width: 180px;"
                    />
                    <col
                      style="width: 100px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Model Name
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                        scope="col"
                        title="Model ID"
                      >
                        Model ID
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        <div
                          class="ant-table-filter-column"
                        >
                          <span
                            class="ant-table-column-title"
                          >
                            Family
                          </span>
                          <span
                            class="ant-dropdown-trigger ant-table-filter-trigger"
                            role="button"
                            tabindex="-1"
                          >
                            <span
                              aria-label="filter"
                              class="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        <div
                          class="ant-table-filter-column"
                        >
                          <span
                            class="ant-table-column-title"
                          >
                            Format
                          </span>
                          <span
                            class="ant-dropdown-trigger ant-table-filter-trigger"
                            role="button"
                            tabindex="-1"
                          >
                            <span
                              aria-label="filter"
                              class="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Size
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Quantization
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Modified
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Actions
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-placeholder"
                    >
                      <td
                        class="ant-table-cell"
                        colspan="8"
                      >
                        <div
                          class="css-dev-only-do-not-override-1vjf2v5 ant-empty ant-empty-normal"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              height="41"
                              viewBox="0 0 64 41"
                              width="64"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <title>
                                No data
                              </title>
                              <g
                                fill="none"
                                fill-rule="evenodd"
                                transform="translate(0 1)"
                              >
                                <ellipse
                                  cx="32"
                                  cy="33"
                                  fill="#f5f5f5"
                                  rx="32"
                                  ry="7"
                                />
                                <g
                                  fill-rule="nonzero"
                                  stroke="#d9d9d9"
                                >
                                  <path
                                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                  />
                                  <path
                                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                    fill="#fafafa"
                                  />
                                </g>
                              </g>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            No data
                          </div>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Dashboard Page - Initial Render Tests Error State should match snapshot for error state 1`] = `
<div
  class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
>
  <span
    class="ant-typography css-dev-only-do-not-override-1vjf2v5"
  >
    <div
      style="text-align: center;"
    >
      <p>
        Failed to load local models
      </p>
      <p
        style="font-size: 0.9em; color: rgb(102, 102, 102); margin-top: 8px;"
      >
        Internal Server Error
      </p>
    </div>
  </span>
  <span
    aria-label="close-circle"
    class="anticon anticon-close-circle colorRed icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="close-circle"
      fill="currentColor"
      fill-rule="evenodd"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
      />
    </svg>
  </span>
</div>
`;

exports[`Dashboard Page - Initial Render Tests Loading State should match snapshot for loading state 1`] = `
<main
  class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageContent"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-1vjf2v5"
        data-testid="loading-message"
      >
        Loading local models...
      </span>
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin pageLoader"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </div>
  </div>
</main>
`;

exports[`Dashboard Page - Initial Render Tests Success State should match snapshot for successful dashboard render 1`] = `
<main
  class="ant-layout-content pageContainer css-dev-only-do-not-override-1vjf2v5"
>
  <div
    class="pageTitleContainer ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-wrap-wrap ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
  >
    <span
      class="ant-typography css-dev-only-do-not-override-1vjf2v5"
      data-testid="heading"
      style="font-weight: 600; font-size: 16px;"
    >
      <div
        class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
        style="gap: 20;"
      >
        <span
          class="ant-typography css-dev-only-do-not-override-1vjf2v5"
        >
          Local Models (
          4
          )
        </span>
        <span
          aria-label="reload"
          class="anticon anticon-reload ml-sm"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="reload"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
            />
          </svg>
        </span>
      </div>
    </span>
    <div
      class="ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
      style="gap: 20;"
    >
      <a
        class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-link ant-btn-color-link ant-btn-variant-link"
        href="https://huggingface.co/models?search=gguf"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="link"
            class="anticon anticon-link"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="link"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M574 665.4a8.03 8.03 0 00-11.3 0L446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3l-39.8-39.8a8.03 8.03 0 00-11.3 0L191.4 526.5c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l116.2-116.2c3.1-3.1 3.1-8.2 0-11.3L574 665.4zm258.6-474c-84.6-84.6-221.5-84.6-306 0L410.3 307.6a8.03 8.03 0 000 11.3l39.7 39.7c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204L665.3 562.6a8.03 8.03 0 000 11.3l39.8 39.8c3.1 3.1 8.2 3.1 11.3 0l116.2-116.2c84.5-84.6 84.5-221.5 0-306.1zM610.1 372.3a8.03 8.03 0 00-11.3 0L372.3 598.7a8.03 8.03 0 000 11.3l39.6 39.6c3.1 3.1 8.2 3.1 11.3 0l226.4-226.4c3.1-3.1 3.1-8.2 0-11.3l-39.5-39.6z"
              />
            </svg>
          </span>
        </span>
        <span>
          Available Models
        </span>
      </a>
      <button
        class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        type="button"
      >
        <span>
          Pull models
        </span>
      </button>
    </div>
  </div>
  <div
    class="pageContent"
  >
    <div
      class="ant-table-wrapper css-dev-only-do-not-override-1vjf2v5"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-1vjf2v5"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-middle css-dev-only-do-not-override-1vjf2v5 ant-table-scroll-horizontal"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="width: 1200px; min-width: 100%; table-layout: fixed;"
                >
                  <colgroup>
                    <col
                      style="width: 200px;"
                    />
                    <col
                      style="width: 250px;"
                    />
                    <col
                      style="width: 150px;"
                    />
                    <col
                      style="width: 100px;"
                    />
                    <col
                      style="width: 120px;"
                    />
                    <col
                      style="width: 130px;"
                    />
                    <col
                      style="width: 180px;"
                    />
                    <col
                      style="width: 100px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Model Name
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell ant-table-cell-ellipsis react-resizable"
                        scope="col"
                        title="Model ID"
                      >
                        Model ID
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        <div
                          class="ant-table-filter-column"
                        >
                          <span
                            class="ant-table-column-title"
                          >
                            Family
                          </span>
                          <span
                            class="ant-dropdown-trigger ant-table-filter-trigger"
                            role="button"
                            tabindex="-1"
                          >
                            <span
                              aria-label="filter"
                              class="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        <div
                          class="ant-table-filter-column"
                        >
                          <span
                            class="ant-table-column-title"
                          >
                            Format
                          </span>
                          <span
                            class="ant-dropdown-trigger ant-table-filter-trigger"
                            role="button"
                            tabindex="-1"
                          >
                            <span
                              aria-label="filter"
                              class="anticon anticon-filter"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="filter"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Size
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Quantization
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Modified
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                      <th
                        class="ant-table-cell react-resizable"
                        scope="col"
                      >
                        Actions
                        <span
                          class="react-resizable-handle"
                        />
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="sha256:abc123def456"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        llama3.2:1b
                      </td>
                      <td
                        class="ant-table-cell ant-table-cell-ellipsis"
                        title="llama3.2:1b"
                      >
                        llama3.2:1b
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        llama
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        gguf
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        1.15 GB
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        Q4_0
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        15/1/2024
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          title="Delete Model"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="delete"
                              class="anticon anticon-delete"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="delete"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="sha256:def456ghi789"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        llama3.2:3b
                      </td>
                      <td
                        class="ant-table-cell ant-table-cell-ellipsis"
                        title="llama3.2:3b"
                      >
                        llama3.2:3b
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        llama
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        gguf
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        2.18 GB
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        Q4_0
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        14/1/2024
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          title="Delete Model"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="delete"
                              class="anticon anticon-delete"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="delete"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="sha256:ghi789jkl012"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        mistral:7b
                      </td>
                      <td
                        class="ant-table-cell ant-table-cell-ellipsis"
                        title="mistral:7b"
                      >
                        mistral:7b
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        mistral
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        gguf
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        4.25 GB
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        Q4_K_M
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        13/1/2024
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          title="Delete Model"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="delete"
                              class="anticon anticon-delete"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="delete"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="sha256:jkl012mno345"
                    >
                      <td
                        class="ant-table-cell"
                      >
                        codellama:13b
                      </td>
                      <td
                        class="ant-table-cell ant-table-cell-ellipsis"
                        title="codellama:13b"
                      >
                        codellama:13b
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        llama
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        gguf
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        7.35 GB
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        Q4_K_M
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        12/1/2024
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          title="Delete Model"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="delete"
                              class="anticon anticon-delete"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="delete"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-1vjf2v5"
          >
            <li
              class="ant-pagination-total-text"
            >
              1-4 of 4 models
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-select-sm ant-select-outlined ant-pagination-options-size-changer css-dev-only-do-not-override-1vjf2v5 ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-wrap"
                  >
                    <span
                      class="ant-select-selection-search"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-controls="rc_select_TEST_OR_SSR_list"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-label="Page Size"
                        aria-owns="rc_select_TEST_OR_SSR_list"
                        autocomplete="off"
                        class="ant-select-selection-search-input"
                        id="rc_select_TEST_OR_SSR"
                        role="combobox"
                        type="search"
                        value=""
                      />
                    </span>
                    <span
                      class="ant-select-selection-item"
                      title="10 / page"
                    >
                      10 / page
                    </span>
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Dashboard Page - Model Listing Tests should match snapshot for table structure 1`] = `
<div
  class="ant-table ant-table-middle css-dev-only-do-not-override-1vjf2v5 ant-table-scroll-horizontal"
>
  <div
    class="ant-table-container"
  >
    <div
      class="ant-table-content"
      style="overflow-x: auto; overflow-y: hidden;"
    >
      <table
        style="width: 1200px; min-width: 100%; table-layout: fixed;"
      >
        <colgroup>
          <col
            style="width: 200px;"
          />
          <col
            style="width: 250px;"
          />
          <col
            style="width: 150px;"
          />
          <col
            style="width: 100px;"
          />
          <col
            style="width: 120px;"
          />
          <col
            style="width: 130px;"
          />
          <col
            style="width: 180px;"
          />
          <col
            style="width: 100px;"
          />
        </colgroup>
        <thead
          class="ant-table-thead"
        >
          <tr>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Model Name
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell ant-table-cell-ellipsis react-resizable"
              scope="col"
              title="Model ID"
            >
              Model ID
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  Family
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              <div
                class="ant-table-filter-column"
              >
                <span
                  class="ant-table-column-title"
                >
                  Format
                </span>
                <span
                  class="ant-dropdown-trigger ant-table-filter-trigger"
                  role="button"
                  tabindex="-1"
                >
                  <span
                    aria-label="filter"
                    class="anticon anticon-filter"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="filter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Size
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Quantization
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Modified
              <span
                class="react-resizable-handle"
              />
            </th>
            <th
              class="ant-table-cell react-resizable"
              scope="col"
            >
              Actions
              <span
                class="react-resizable-handle"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="ant-table-tbody"
        >
          <tr
            aria-hidden="true"
            class="ant-table-measure-row"
            style="height: 0px; font-size: 0px;"
          >
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
            <td
              style="padding: 0px; border: 0px; height: 0px;"
            >
              <div
                style="height: 0px; overflow: hidden;"
              >
                 
              </div>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="sha256:abc123def456"
          >
            <td
              class="ant-table-cell"
            >
              llama3.2:1b
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="llama3.2:1b"
            >
              llama3.2:1b
            </td>
            <td
              class="ant-table-cell"
            >
              llama
            </td>
            <td
              class="ant-table-cell"
            >
              gguf
            </td>
            <td
              class="ant-table-cell"
            >
              1.15 GB
            </td>
            <td
              class="ant-table-cell"
            >
              Q4_0
            </td>
            <td
              class="ant-table-cell"
            >
              15/1/2024
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                title="Delete Model"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="sha256:def456ghi789"
          >
            <td
              class="ant-table-cell"
            >
              llama3.2:3b
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="llama3.2:3b"
            >
              llama3.2:3b
            </td>
            <td
              class="ant-table-cell"
            >
              llama
            </td>
            <td
              class="ant-table-cell"
            >
              gguf
            </td>
            <td
              class="ant-table-cell"
            >
              2.18 GB
            </td>
            <td
              class="ant-table-cell"
            >
              Q4_0
            </td>
            <td
              class="ant-table-cell"
            >
              14/1/2024
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                title="Delete Model"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="sha256:ghi789jkl012"
          >
            <td
              class="ant-table-cell"
            >
              mistral:7b
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="mistral:7b"
            >
              mistral:7b
            </td>
            <td
              class="ant-table-cell"
            >
              mistral
            </td>
            <td
              class="ant-table-cell"
            >
              gguf
            </td>
            <td
              class="ant-table-cell"
            >
              4.25 GB
            </td>
            <td
              class="ant-table-cell"
            >
              Q4_K_M
            </td>
            <td
              class="ant-table-cell"
            >
              13/1/2024
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                title="Delete Model"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
          <tr
            class="ant-table-row ant-table-row-level-0"
            data-row-key="sha256:jkl012mno345"
          >
            <td
              class="ant-table-cell"
            >
              codellama:13b
            </td>
            <td
              class="ant-table-cell ant-table-cell-ellipsis"
              title="codellama:13b"
            >
              codellama:13b
            </td>
            <td
              class="ant-table-cell"
            >
              llama
            </td>
            <td
              class="ant-table-cell"
            >
              gguf
            </td>
            <td
              class="ant-table-cell"
            >
              7.35 GB
            </td>
            <td
              class="ant-table-cell"
            >
              Q4_K_M
            </td>
            <td
              class="ant-table-cell"
            >
              12/1/2024
            </td>
            <td
              class="ant-table-cell"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-dangerous ant-btn-color-dangerous ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                title="Delete Model"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <span
                    aria-label="delete"
                    class="anticon anticon-delete"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="delete"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page - Pull Models Button Tests should match snapshot for pull model modal 1`] = `
<div
  data-testid="pull-model-modal"
>
  <h2>
    Pull Model Modal
  </h2>
  <button
    data-testid="modal-close"
  >
    Close
  </button>
  <button
    data-testid="modal-success"
  >
    Success
  </button>
</div>
`;

exports[`Dashboard Page - Table Actions Tests should match snapshot for delete confirmation modal 1`] = `
<div
  data-testid="confirmation-modal"
>
  <h2>
    Delete Model
  </h2>
  <p>
    Are you sure you want to delete the model "llama3.2:1b"? This action cannot be undone.
  </p>
  <button
    data-testid="confirm-cancel"
  >
    Cancel
  </button>
  <button
    data-testid="confirm-delete"
  >
    Delete
  </button>
</div>
`;
